Fixed bad tab indexes Fixed visibility of alt text for options dropdowns Fixed missing description for mounted Editors

--- a/packages/vanilla-theme-core/scss/patches/_vanillicon-general-patches.scss
+++ b/packages/vanilla-theme-core/scss/patches/_vanillicon-general-patches.scss
@@ -4,6 +4,8 @@
  * @license GPL-2.0-only
  */
 
+@import "../../../../library/src/scss/mixins/mixin.utilities";
+
 /* -------------------------------------------------------------- *\
     Styles
 \* -------------------------------------------------------------- */
@@ -254,7 +256,7 @@
 }
 
 .OptionsTitle {
-    display: none;
+    @include sr-only;
 }
 
 .SocialIcon {
